# time-series-management-system

./: .gitignore  db.sqlite3  db.sqlite3-journal  manage.py  mm.html  pyproject.toml  requirements.txt
Base/: admin.py  forms.py  models.py  resource.py  serializer.py  urls.py  views.py
Base/api/: view.py
Base/migrations/: 0001_initial.py  0002_alter_category_topic.py  0002_topic_icon.py  0002_topic_is_mobile_dashaboard_overview.py  0003_alter_annualdata_indicator.py  0003_alter_indicator_kpi_characteristics_and_more.py  0003_topic_background_image.py  0004_alter_monthdata_options_alter_quarterdata_options.py  0004_alter_quarterdata_indicator.py
DashBoard/: admin.py  context_processors.py  forms.py  models.py  serializer.py  urls.py  views.py
DashBoard/api/: views.py
DashBoard/migrations/: 0001_initial.py  0002_component_name_alter_component_category_and_more.py  0003_alter_component_name_alter_dashboard_color.py  0004_dashboardindicator_component_and_more.py  0005_alter_component_category_alter_dashboard_color.py  0006_alter_dashboard_color_and_more.py  0007_component_is_multiple_alter_component_category_and_more.py  0008_component_path_alter_dashboard_color.py  0009_remove_component_html_remove_component_js_and_more.py  0019_alter_dashboard_color.py  (+48 more)
DataPortal/: apps.py  serializers.py  urls.py  views.py
TimeSeries/: asgi.py  settings.py  urls.py  wsgi.py
UserAdmin/: forms.py  urls.py  views.py
UserManagement/: admin.py  forms.py  models.py  views.py
core/: requirements.txt
mediaManager/: admin.py  models.py
mobile/: admin.py  models.py  urls.py
(+207 files in other folders)
